# carry_food

./: CMakeLists.txt  CamFace.py  audio.py  main.py  move.py  package.xml
launch/: carry_food_v2.launch
speech_and_NLP/: Dockerfile  docker-compose.yaml  readme.md  requirements.txt  setup.sh
speech_and_NLP/src/: main.py
speech_and_NLP/src/config/: dictionary.json
speech_and_NLP/src/temp/: readme.md
speech_and_NLP/src/tools/speech_to_text/: extractPersonName.py  isMeaning.py  mecabAnalyzer.py  replaceFromDict.py  search.py  speechToText.py  spellcheck.py
speech_and_NLP/src/tools/text_to_speech/: getAudioLength.py  googleTextToMp3.py  playAudio.py  textToSpeech.py  textToWav.py  verbose.py
